CMP-491
Move Compass to use Java 5.0