@@ -2,16 +2,6 @@
 
 <!--
   Build file for the Compass.
-
-  This script requires a "lib" directory containing the necessary third party JAR files.
-  See "project.properties" for the definitions of the properties used in this file.
-
-  Building Compass requires JDK 1.5+; the releases are built with Sun's JDK 1.5.0.
-	The test suite is able to run on JDK 1.4 and 1.3 as well.
-
-  Note: To successfully run the tests on JDK < 1.5.0, you need to use Xerces or any
-	other JAXP parser that properly supports XML includes. A simple way to achieve this
-	is to put xml-apis.jar and xercesImpl.jar into your "JAVA_HOME/jre/lib/ext" directory.
 -->
 
 <project name="compass" default="usage" basedir=".">
@@ -19,21 +9,6 @@
     <property file="project.properties"/>
     <property file="build.properties"/>
 
-
-    <!--
-         Set up properties that indicate whether we're building on JDK 1.5.
-         Currently simply checks whether the Java version is not 1.3 or 1.4,
-         due to the lack of a greater-than comparator in Ant.
-     -->
-
-    <condition property="tiger.available">
-        <not>
-            <or>
-                <equals arg1="${ant.java.version}" arg2="1.3"/>
-                <equals arg1="${ant.java.version}" arg2="1.4"/>
-            </or>
-        </not>
-    </condition>
 
     <path id="all-libs">
 
@@ -64,7 +39,6 @@
 
         <delete dir="${target.classes.dir}"/>
         <delete dir="${target.testclasses.dir}"/>
-        <delete dir="${target.tigertestclasses.dir}"/>
         <delete dir="${target.clover.dir}"/>
         <delete dir="${target.junit.reports.dir}"/>
         <delete dir="${target.junit.summary.dir}"/>
@@ -96,7 +70,7 @@
         <mkdir dir="${target.classes.dir}"/>
         <mkdir dir="${target.classes.dir}/META-INF"/>
 
-        <javac destdir="${target.classes.dir}" source="1.4" target="1.4" debug="${debug}"
+        <javac destdir="${target.classes.dir}" source="1.5" target="1.5" debug="${debug}"
                deprecation="false" optimize="false" failonerror="true">
             <src path="${main.src.dir}"/>
             <classpath refid="all-libs"/>
@@ -118,42 +92,14 @@
 
 
     <!--
-         Compile the JDK 1.5 source tree.
-     -->
-    <target name="buildtiger" depends="buildmain" description="Compile JDK 1.5 source tree java files into class files">
-
-        <javac destdir="${target.classes.dir}" source="1.5" target="1.5" debug="${debug}"
-               deprecation="false" optimize="false" failonerror="true">
-            <src path="${tiger.src.dir}"/>
-            <classpath refid="all-libs"/>
-        </javac>
-
-        <copy todir="${target.classes.dir}" preservelastmodified="true">
-            <fileset dir="${tiger.src.dir}">
-                <include name="**/*.properties"/>
-                <include name="**/*.handlers"/>
-                <include name="**/*.schemas"/>
-                <include name="**/*.xml"/>
-                <include name="**/*.dtd"/>
-                <include name="**/*.xsd"/>
-                <include name="META-INF/**" />
-            </fileset>
-        </copy>
-        
-    </target>
-
-
-    <!--
          Compile the main, JDK 1.5, and AspectJ sources.
      -->
-    <target name="build" depends="buildmain,buildtiger"
-            description="Compile main, and JDK 1.5 sources"/>
+    <target name="build" depends="buildmain" description="Compile main"/>
 
 
     <target name="initdist" description="Initialize the distribution directory">
 
         <mkdir dir="${dist.dir}"/>
-        <mkdir dir="${dist.dir}/modules"/>
 
     </target>
 
@@ -181,17 +127,6 @@
     </target>
 
 
-    <target name="modulejars" depends="build,initdist"
-            description="Create module-specific JAR files (part of compass.jar)">
-
-        <jar-module name="${compass-name}-core" includes="org/apache/lucene/**,org/compass/core/**"/>
-        <jar-module name="${compass-name}-vocabulary" includes="org/compass/vocabulary/**"/>
-        <jar-module name="${compass-name}-gps" includes="org/compass/gps/**"/>
-        <jar-module name="${compass-name}-spring" includes="META-INF/**,org/compass/spring/**,org/springframework/**"/>
-        <jar-module name="${compass-name}-annotations" includes="org/compass/annotations/**"/>
-
-    </target>
-
     <target name="srczip" depends="initdist" description="Create source ZIP (containing Java sources)">
 
         <delete file="${dist.dir}/compass-src.zip"/>
@@ -201,9 +136,6 @@
                 <include name="org/apache/lucene/**"/>
                 <include name="org/compass/**"/>
             </fileset>
-			<fileset dir="${tiger.src.dir}">
-				<include name="org/compass/**"/>
-			</fileset>
         </zip>
 
     </target>
@@ -234,8 +166,7 @@
     </target>
 
 
-    <target name="alljars" depends="fulljar,modulejars,srczip"
-            description="Create all JAR files"/>
+    <target name="alljars" depends="fulljar,srczip" description="Create all JAR files"/>
 
 
     <!--
@@ -263,9 +194,6 @@
                 <include name="org/apache/lucene/**"/>
                 <include name="org/compass/**"/>
             </packageset>
-            <packageset dir="${tiger.src.dir}">
-                <include name="org/compass/**"/>
-            </packageset>
             <link href="http://java.sun.com/j2ee/1.4/docs/api"/>
             <link href="http://java.sun.com/j2se/1.5.0/docs/api"/>
             <link href="http://lucene.apache.org/java/docs/api/" />
@@ -284,7 +212,7 @@
 
         <mkdir dir="${target.testclasses.dir}"/>
 
-        <javac destdir="${target.testclasses.dir}" source="1.3" target="1.3" debug="${debug}"
+        <javac destdir="${target.testclasses.dir}" source="1.5" target="1.5" debug="${debug}"
                deprecation="false" optimize="false" failonerror="true">
             <src path="${main.test.dir}"/>
             <classpath refid="all-libs"/>
@@ -317,32 +245,7 @@
     </target>
 
 
-    <target name="buildtigertests" depends="buildmaintests"
-            description="Compile JDK 1.5 test java files into class files">
-
-        <mkdir dir="${target.tigertestclasses.dir}"/>
-
-        <javac destdir="${target.tigertestclasses.dir}" source="1.5" target="1.5" debug="${debug}"
-               deprecation="false" optimize="false" failonerror="true">
-            <src path="${tiger.test.dir}"/>
-            <classpath refid="all-libs"/>
-            <classpath location="${target.classes.dir}"/>
-            <classpath location="${target.testclasses.dir}"/>
-        </javac>
-
-        <!-- Pick up config files from test directory -->
-        <copy todir="${target.tigertestclasses.dir}" preservelastmodified="true">
-            <fileset dir="${tiger.test.dir}">
-                <include name="**/*.properties"/>
-                <include name="**/*.xml"/>
-            </fileset>
-        </copy>
-
-    </target>
-
-
-    <target name="buildtests" depends="buildmaintests,buildtigertests"
-            description="Compile main, and JDK 1.5 test sources"/>
+    <target name="buildtests" depends="buildmaintests" description="Compile main test sources"/>
 
 
     <target name="maintests" depends="buildtests" description="Run main tests">
@@ -377,39 +280,6 @@
     </target>
 
 
-    <target name="tigertests" depends="buildtests" if="tiger.available" description="Run JDK 1.5 tests">
-
-        <mkdir dir="${target.junit.reports.dir}"/>
-
-        <junit forkmode="${junit.forkmode}" printsummary="yes" haltonfailure="yes" haltonerror="yes">
-
-            <jvmarg line="-Djava.awt.headless=true -Xmx512m -XX:MaxPermSize=128m"/>
-            <!-- Needed since the order of the jar loading is unknown, and Lucene SegmentReader might -->
-            <!-- be loaded before compass (should not happen in actual apps)) -->
-            <sysproperty key="org.apache.lucene.SegmentReader.class"
-                         value="org.apache.lucene.index.CompassSegmentReader"/>
-
-            <!-- Must go first to ensure any jndi.properties files etc take precedence  -->
-            <classpath location="${target.tigertestclasses.dir}"/>
-            <classpath location="${target.testclasses.dir}"/>
-            <classpath location="${target.classes.dir}"/>
-
-            <!-- Need files loaded as resources -->
-            <classpath location="${tiger.test.dir}"/>
-
-            <classpath refid="all-libs"/>
-
-            <formatter type="plain" usefile="false"/>
-
-            <batchtest fork="yes" todir="${target.junit.reports.dir}">
-                <fileset dir="${target.tigertestclasses.dir}" includes="${test.includes}" excludes="${test.excludes}"/>
-            </batchtest>
-
-        </junit>
-
-    </target>
-
-
     <!--
          Run test suite. This and clover.tests take their includes and excludes from
          "build.properties". However it's possible to run specific tests by passing in
@@ -417,7 +287,7 @@
          command line, as below:
              ant tests -Dtest.includes=org/compass/core/**/*Tests
      -->
-    <target name="tests" depends="maintests,tigertests" description="Run tests"/>
+    <target name="tests" depends="maintests" description="Run tests"/>
 
 
     <!--
@@ -438,7 +308,6 @@
                          value="org.apache.lucene.index.CompassSegmentReader"/>
 
             <!-- Must go first to ensure any jndi.properties files etc take precedence  -->
-            <classpath location="${target.tigertestclasses.dir}"/>
             <classpath location="${target.testclasses.dir}"/>
             <classpath location="${target.classes.dir}"/>
 
@@ -452,7 +321,6 @@
 
             <batchtest fork="yes" todir="${target.junit.reports.dir}">
                 <fileset dir="${target.testclasses.dir}" includes="${test.includes}" excludes="${test.excludes}"/>
-                <fileset dir="${target.tigertestclasses.dir}" includes="${test.includes}" excludes="${test.excludes}"/>
             </batchtest>
 
         </junit>
@@ -477,7 +345,7 @@
 
         <mkdir dir="${target.clover.dir}"/>
 
-        <javac destdir="${target.clover.dir}" source="1.3" target="1.3" debug="${debug}"
+        <javac destdir="${target.clover.dir}" source="1.5" target="1.5" debug="${debug}"
                deprecation="false" optimize="false" failonerror="true">
             <src path="${main.src.dir}"/>
             <classpath refid="all-libs"/>
@@ -497,34 +365,7 @@
     </target>
 
 
-    <target name="clover.buildtiger" description="Compile main source tree java files WITH CLOVER into class files">
-
-        <!-- switch on Clover by specifying it as the compiler to use -->
-        <property name="build.compiler" value="org.apache.tools.ant.taskdefs.CloverCompilerAdapter"/>
-
-        <mkdir dir="${target.clover.dir}"/>
-
-        <javac destdir="${target.clover.dir}" source="1.5" target="1.5" debug="${debug}"
-               deprecation="false" optimize="false" failonerror="true">
-            <src path="${tiger.src.dir}"/>
-            <classpath refid="all-libs"/>
-        </javac>
-
-        <copy todir="${target.clover.dir}" preservelastmodified="true">
-            <fileset dir="${tiger.src.dir}">
-                <include name="**/*.properties"/>
-                <include name="**/*.handlers"/>
-                <include name="**/*.schemas"/>
-                <include name="**/*.xml"/>
-                <include name="**/*.dtd"/>
-                <include name="**/*.xsd"/>
-            </fileset>
-        </copy>
-
-    </target>
-
-
-    <target name="clover.tests" depends="buildtests,clover.build,clover.buildtiger" description="Run Clover tests">
+    <target name="clover.tests" depends="buildtests,clover.build" description="Run Clover tests">
 
         <property name="reports.dir" value="${target.junit.reports.dir}"/>
 
